fix overflow y, add underline on nav and svg attribute names

--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   background: #ff5c19;
   min-height: 100%;
+  overflow-y: hidden;
 
   .facePoster {
     width: 100px;
@@ -28,10 +29,14 @@
       .nav-item {
         list-style-type: none;
 
-        a {
+        .nav-link {
           color: black;
           font-size: 1.25rem;
           text-transform: lowercase;
+        }
+
+        .nav-link-active {
+          text-decoration: underline;
         }
       }
     }
@@ -44,7 +49,7 @@
     padding: 0 3rem 1rem 3rem;
 
     .mainContainerChildren {
-      // overflow: scroll;
+      @include fadeIn;
     }
 
     .leftWall {
@@ -58,10 +63,6 @@
   footer {
     display: flex;
     flex-direction: column;
-
-    .floor {
-      // z-index: 0;
-    }
   }
 }
 
